// To generate code: `protoc --gofast_out=. HttpTransactionProto.proto`

syntax = "proto3";

package forwarder;

message HeaderValuesProto {
    repeated string values = 1;
}

message EndpointProto  {
    string route = 1;
    string name = 2;
}

enum TransactionPriorityProto {
    NORMAL = 0;
    HIGH = 1;
 }

message HttpTransactionProto {
    string Domain = 1;
    EndpointProto Endpoint = 2;
    map<string, HeaderValuesProto> Headers = 3;
    bytes Payload = 4;
    int64 ErrorCount = 5;
    int64 CreatedAt = 6;
    bool Retryable = 7;
    TransactionPriorityProto priority = 8;
}

message HttpTransactionProtoCollection {
    int32 version = 1;
    repeated HttpTransactionProto values = 2;
}